# FastApi_Study

./: AuthX.py  README.md  customers_orders.db  main.py
FastApi_Study/: customers_orders.db  main.py  pyproject.toml
FastApi_Study/src/domain/customer/: customer_entity_1.py  customer_repository_3.py  customer_rest_controller_5.py  customer_schema_2.py  customer_service_4.py
FastApi_Study/src/domain/order/: order_entity_1.py  order_repository_3.py  order_rest_controller_5.py  order_service_4.py
core/: database.py  requirements.txt
domain/customer/: customer_entity_1.py  customer_repository_3.py  customer_rest_controller_5.py  customer_schema_2.py  customer_service_4.py
domain/order/: order_entity_1.py  order_repository_3.py  order_rest_controller_5.py  order_schema_2.py  order_service_4.py
