[tool.poetry]
name = "fastapi-study"
version = "0.1.0"
description = ""
authors = ["Vladyslav Dudarenko <dudarenkovladyslav@gmail.com>"]
readme = "README.md"
packages = [{ include = "fastapi_study", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
annotated-types = "0.7.0"
anyio = "4.11.0"
authx = "1.4.3"
certifi = "2025.8.3"
cffi = "2.0.0"
charset-normalizer = "3.4.3"
click = "8.3.0"
colorama = "0.4.6"
cryptography = "46.0.3"
ecdsa = "0.19.1"
fastapi = "0.118.0"
greenlet = "3.2.4"
h11 = "0.16.0"
idna = "3.10"
iniconfig = "2.1.0"
itsdangerous = "2.2.0"
packaging = "25.0"
pluggy = "1.6.0"
pyasn1 = "0.6.1"
pycparser = "2.23"
pydantic = "2.11.9"
pydantic-settings = "2.11.0"
pydantic-core = "2.33.2"
pygments = "2.19.2"
pyjwt = "2.10.1"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.2.1"
python-jose = "3.5.0"
pytz = "2025.2"
requests = "2.32.5"
rsa = "4.9.1"
six = "1.17.0"
sniffio = "1.3.1"
sqlalchemy = "2.0.43"
sqlmodel = "0.0.25"
starlette = "0.48.0"
typing-inspection = "0.4.2"
typing-extensions = "4.15.0"
urllib3 = "2.5.0"
uvicorn = "0.37.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.4.2"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
